# ecosense_bin

./: README.md  partitions.csv  sdkconfig  sdkconfig.old
components/espressif__esp_cam_sensor/sensors/ov02c10/: ov02c10.c
components/espressif__esp_cam_sensor/sensors/ov02c10/cfg/: ov02c10_default.json
components/espressif__esp_cam_sensor/sensors/ov02c10/private_include/: ov02c10_settings.h
main/: CMakeLists.txt  ai_infer.cpp  ai_infer_c.h  app_lcd.c  idf_component.yml  main.c
